--- a/_posts/2019-08-25-python作者.markdown
+++ b/_posts/2019-08-25-python作者.markdown
@@ -1,8 +1,9 @@
 ## python之父
-    Guido van Rossum(吉多·范罗苏姆)，人生苦短，我用python.
-    ![吉多](http://file.az009.com/wp-content/uploads/2018/04/15220629480345f771388e9.jpg)
+Guido van Rossum(吉多·范罗苏姆)，人生苦短，我用python.
+
+![Guido van Rossum](http://file.az009.com/wp-content/uploads/2018/04/15220629480345f771388e9.jpg "Guido van Rossum")
+
 ## 吉多大事记
-     
 * **1956**
     * 1956年1月31出生于荷兰。
 * **1982**
