--- a/_posts/2019-11-03-perl命令.markdown
+++ b/_posts/2019-11-03-perl命令.markdown
@@ -24,3 +24,6 @@ use和require的区别
 strict这个关键字的作用是强迫程序开发者使用比较严谨的Perl写法，避开一些比较容易出错的编写方式，让代码在运行出错的时候，更高效的去排查问题。脚本中加上了strict之后，在整个代码中就会有很多的限制就是在定义任何的变量之前一定需要加上关键字**my**。尤其是当你的程序会有很多行的时候
 ## use warnings
 warnings就意味着Perl程序开启了所有的警告信息，让程序员更容易发觉代码可能会出问题的地方。一般都是跟着strict一起使用
+```python
+    use warnings
+```
