--- a/_posts/2020-03-26-flink代码贡献流程.md
+++ b/_posts/2020-03-26-flink代码贡献流程.md
@@ -9,6 +9,7 @@ tags:
     - Perl
     - programming
 ---
+**如何一步一步的参与apache开源项目的贡献，本文内容前提是有JIRA和github的账号**
 ## 创建JIRA
 我们常见的开源项目都是通过JIRA来管理各类的bug以及feature的相关问题，首选我们自己可以去创建一个jira问题。https://issues.apache.org/jira/projects/FLINK/issues/FLINK-16805?filter=allopenissues
 ### 创建JIRA
